chapter_cicd/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocdupdate
  labels:
    app: argocdupdate
spec:
  replicas: 1
  selector:
    matchLabels:
      app: argocdupdate
  template:
    metadata:
      labels:
        app: argocdupdate
    spec:
      containers:
      - name: argocdupdate
        image: ghcr.io/nginxinc/nginx-unprivileged:1.27.1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: http
