chapter_cicd/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: handson
  name: handson
  namespace: argo-cd
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
    targetPort: http
    name: http
  selector:
    app: handson
